cabal-version:       2.0
name:                fedora-dists
version:             30.0.0
synopsis:            Library for Fedora distribution versions
homepage:            https://github.com/juhp/fedora-dists
bug-reports:         https://github.com/juhp/fedora-dists/issues
license:             GPL-3
license-file:        LICENSE
author:              Jens Petersen
maintainer:          petersen@fedoraproject.org
copyright:           2018 Jens Petersen
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.3

source-repository head
  type:                git
  location:            https://github.com/juhp/fedora-dists.git

library
  exposed-modules:     FedoraDists
                       

  build-depends:       base
                     

  ghc-options:         -Wall
                       -fwarn-missing-signatures

  default-language:    Haskell2010
